Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-699

Deadlock in statestore when unregistering a subscriber and building a topic update

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 1.2.1
    • Impala 1.2.2
    • None
    • None

    Description

      There is a deadlock in the statestore when unregistering a subscriber and also building a topic update. This is because UnregisterSubscriber() first takes the subscribers_ lock and then takes the topics_ lock to remove all transient entries. In ProcessOneSubscriber() we take the topics_ lock and then the subscribers_ lock in GetMinSubscriberTopicVersion() to build an update to send. This can clearly lead to a deadlock.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            lskuff Lenni Kuff
            lskuff Lenni Kuff
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment