IMPALA-699: Deadlock in statestore when unregistering a subscriber and building a topic update

In ProcessOneSubscriber() we acquire topic_lock_ and then subscribers_lock_ (in the call
to GetMinSubscriberTopicVersion()). In UnregisterSubscriber(), we take these locks in the
reverse order, which clearly leads to a deadlock.
This fix updates ProcessOneSubscriber() to fill in the min subscriber topic versions after
releasing topics_lock_.

Change-Id: Ib576bb3786c147f5f8dab49a75f95601b1a3a877
Reviewed-on: http://gerrit.ent.cloudera.com:8080/1101
Reviewed-by: Lenni Kuff <lskuff@cloudera.com>
Tested-by: jenkins